# moveit-nie-istnieje

./: .env.example  .gitignore  Cargo.toml  README.md  jokes.txt  template.html  upload.bat  upload.sh
.github/workflows/: rust.yml
generate/: .env.example  Cargo.toml  generate.py  jokes.txt
generate/src/: main.rs
src/: main.rs
web/: template.html
