[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
reqwest = "0.11.4"
dotenv = "0.15.0"
serde_json = "1.0.96"
serde = { version = "1.0.96", features = ["derive"] }